example-3-json/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string: 
                  JSON = (loadfile "/var/lib/lua/JSON.lua")()
                  function envoy_on_request(request_handle)
                    local correlationid = request_handle:headers():get("correlationid")
                    local content_type = request_handle:headers():get("content-type")
                    local lua_value = {}
                    if content_type == "application/json" then
                      request_handle:logDebug("******* The body is application json")
                      local body = request_handle:body()
                      local body_size = body:length()
                      local body_bytes = body:getBytes(0, body_size)
                      local raw_json_text = tostring(body_bytes)
                      lua_value = JSON:decode(raw_json_text)
                    end
                    if correlationid == nil then
                        if lua_value.correlationid ~= nil then
                          request_handle:logDebug("*******debug replacing header")
                          request_handle:headers():replace("correlationid",lua_value.correlationid)
                        end
                    end
                  end
          - name: envoy.filters.http.router
            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: strict_dns # static
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
